--- a/Lesson_cups/index.html
+++ b/Lesson_cups/index.html
@@ -23,7 +23,7 @@
 		<div class="card">		
 				<span class="card__price">$3</span>
 				<div class="card__img">
-					<img src="img/Gold.png" alt="">
+					<img src="img/gold.png" alt="">
 				</div>
 				<div class="card__text">
 					<h1>Gold</h1>
@@ -33,7 +33,7 @@
 		<div class="card">
 				<span class="card__price">$2.5</span>
 				<div class="card__img">
-					<img src="img/Silver.png" alt="">
+					<img src="img/silver.png" alt="">
 				</div>
 				<div class="card__text">
 					<h1>Silver</h1>
