--- a/Cahee/app/index.html
+++ b/Cahee/app/index.html
@@ -45,27 +45,30 @@
 	</header>
 	<section class="section_1 main-screen">	
 		<div class="container main-screen__container">
-			<div class="row ">
+			<div class="row main-screen__row">
 				<div class="col-4 main-screen__content">
 					<h1 class="main-screen__heading">Fresh Life</h1>
 					<p class="main-screen__text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliq Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam.</p>
 					<button class="main-screen__button">GET FREE NOW</button>	
 				</div>	
 			</div>
+
+</div>
+			
 			<div class="row ">
 				<div class="col-12">
 					<a href="#about" class="main-screen__scroll-link">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 39" width="24" height="39">
-						<style>
-							tspan { white-space:pre }
-							.shp0 { fill: #000000 } 
-						</style>
-						<path id="scroll.svg" class="shp0" d="M12.5 10.76C11.58 10.76 10.84 11.5 10.84 12.42C10.84 13.33 11.58 14.07 12.5 14.07C13.41 14.07 14.15 13.33 14.15 12.42C14.15 11.5 13.41 10.76 12.5 10.76ZM11.54 0.99C5.61 1.47 1 6.44 1 12.42L1 26.49C1 32.84 6.16 38 12.5 38C18.84 38 24 32.84 24 26.49L24 12.42C24 6.44 19.38 1.47 13.45 0.99M12.5 36.09C7.21 36.09 2.91 31.78 2.91 26.49L2.91 12.42C2.91 7.12 7.21 2.81 12.5 2.81C17.79 2.81 22.09 7.12 22.09 12.42L22.09 26.49C22.09 31.78 17.79 36.09 12.5 36.09Z" />
-					</svg>
+							<style>
+								tspan { white-space:pre }
+								.shp0 { fill: #000000 } 
+							</style>
+							<path id="scroll.svg" class="shp0" d="M12.5 10.76C11.58 10.76 10.84 11.5 10.84 12.42C10.84 13.33 11.58 14.07 12.5 14.07C13.41 14.07 14.15 13.33 14.15 12.42C14.15 11.5 13.41 10.76 12.5 10.76ZM11.54 0.99C5.61 1.47 1 6.44 1 12.42L1 26.49C1 32.84 6.16 38 12.5 38C18.84 38 24 32.84 24 26.49L24 12.42C24 6.44 19.38 1.47 13.45 0.99M12.5 36.09C7.21 36.09 2.91 31.78 2.91 26.49L2.91 12.42C2.91 7.12 7.21 2.81 12.5 2.81C17.79 2.81 22.09 7.12 22.09 12.42L22.09 26.49C22.09 31.78 17.79 36.09 12.5 36.09Z" />
+						</svg>
 					</a>
 				</div>	
 			</div>
-		</div>
+		
 	</section>
 	<section class="section_2 about-us" id="about">
 		<div class="container">
