cahee_subscribe_add

--- a/Cahee/app/index.html
+++ b/Cahee/app/index.html
@@ -53,8 +53,8 @@
 				</div>	
 			</div>
 
-</div>
-			
+		</div>
+
 			<div class="row ">
 				<div class="col-12">
 					<a href="#about" class="main-screen__scroll-link">
@@ -161,6 +161,35 @@
 			<button class="gallery__button">VIEW MORE</button>		
 		</div>		
 </section>
+
+<section class="section_5" id="subscribe">
+	<div class="container subscribe">
+			<div class="row">
+				<div class="col-6 subscribe__content">
+					<div class="subscribe__heading">
+						<h3>Subscribe To Us</h3>
+					</div>	
+					<div class="subscribe__text">
+						<p>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+					</div>
+				</div>	
+			</div>	
+			<div class="row">
+				<div class="col-8 subscribe__submit-wrapper">
+					<form class="subscribe__form">
+						<input class="subscribe__text-input" type="text" placeholder="Your email address...">
+						<button class="subscribe__button">SUBSCRIBE</button>
+					</form>
+				</div>	
+			</div>
+	</div>		
+			
+
+
+
+
+</section>
+
 
 </body>
 </html>
