--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
 					<span>Cahee</span>
 				</a>
 			</li>
+
+			<li class="item">
+				<a href="Lesson_exam/app/index.html" class="link">
+					<span>Exam</span>
+				</a>
+			</li>
+			
 			
 		</ul>
 	</div>
