--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 		<ul class="list">
-			<li class="item">
+			<!-- <li class="item">
 				<a href="lesson_2/index.html" class="link">
 					<span>lesson_2</span>
 				</a>
@@ -31,14 +31,14 @@
 			<li class="item">
 				<a href="lesson_8_foliac/index.html" class="link">
 					<span>Foliac</span>
-				</a>
-			</li>
+				</a> -->
+<!-- 			</li> -->
 			<li class="item">
 				<a href="Lesson_9_ProductMan/index.html" class="link">
 					<span>ProductMan</span>
 				</a>
 			</li>
-			<li class="item">
+			<!-- <li class="item">
 				<a href="Lesson_css_grid/index.html" class="link">
 					<span>Lesson_css_grid</span>
 				</a>
@@ -62,12 +62,12 @@
 				<a href="blog-grid/index.html" class="link">
 					<span>Blog-grid</span>
 				</a>
-			</li>
-			<li class="item">
+			</li> -->
+<!-- 			<li class="item">
 				<a href="Lesson_nikedark/index.html" class="link">
 					<span>Nike dark</span>
 				</a>
-			</li>
+			</li> -->
 			<li class="item">
 				<a href="Cahee/app/index.html" class="link">
 					<span>Cahee</span>
@@ -78,11 +78,8 @@
 				<a href="Lesson_exam/app/index.html" class="link">
 					<span>Exam</span>
 				</a>
-			</li>
-			
-			
+			</li>						
 		</ul>
 	</div>
-
 </body>
 </html>
