--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 					<span>Blog-grid</span>
 				</a>
 			</li> -->
-<!-- 			<li class="item">
+			<li class="item">
 				<a href="Lesson_nikedark/index.html" class="link">
 					<span>Nike dark</span>
 				</a>
-			</li> -->
+			</li>
 			<li class="item">
 				<a href="Cahee/app/index.html" class="link">
 					<span>Cahee</span>
