cahee footer add

--- a/Lesson_18_bootstrap2/app/index.html
+++ b/Lesson_18_bootstrap2/app/index.html
@@ -73,7 +73,6 @@
 						<div class="section-title">
 							<h2>about</h2>
 						</div>
-
 					</div>
 				</div>
 				<div class="row about__row">
@@ -92,50 +91,145 @@
 			</div>
 		</div>
 	</section>
-
-
-	<section class="services">
+	<section class="services section__height d-flex align-items-center">
 		<div class="container">
-
-			<!-- .row>.col>.section-title -->
-
-			<div class="row section__height d-flex  align-items-center">
-				<div class="col">
-					<div class="grid-item__title">
-						<img src="/img/target.png" alt="target icon" class="grid-item__icon">
-						 <h3>creative</h3>
-					</div>
-					<p class="grid-item__text">Mirum est notare quam littera gothica nunc putamus parum claram.</p>
-					<a href="#" class="arrow__link">Learn more
-						<span class="arrow"></span>
-					</a>
+			<div class="services__content">
+				<div class="row justify-content-end">		
+					<div class="section-title">
+						<h2>services</h2>
+					</div>					
 				</div>
-				<div class="col">
-					<div class="grid-item__title">
-						<img src="/img/camera.png" alt="camera icon" class="grid-item__icon">
-						<h3>Professional</h3>
+				<div class="row">
+					<div class="col">
+						<div class="grid-item__title">
+							<img src="/img/target.png" alt="target icon" class="grid-item__icon">
+							<h3>creative</h3>
+						</div>
+						<p class="grid-item__text">Mirum est notare quam littera gothica nunc putamus parum claram.</p>
+						<a href="#" class="arrow__link">Learn more
+							<span class="arrow"></span>
+						</a>
 					</div>
-					<p class="grid-item__text">Claritas est etiam processus dynamicus sequitur mutationem consuetudium</p>
-					<a href="#" class="arrow__link">Learn more
-						<span class="arrow"></span>
-					</a>
-				</div>
-				<div class="col">
-					<div class="grid-item__title">
-						<img src="/img/wallet.png" alt="wallet icon" class="grid-item__icon">
-						<h3>Money Saving</h3>
+					<div class="col">
+						<div class="grid-item__title">
+							<img src="/img/camera.png" alt="camera icon" class="grid-item__icon">
+							<h3>Professional</h3>
+						</div>
+						<p class="grid-item__text">Claritas est etiam processus dynamicus sequitur mutationem consuetudium</p>
+						<a href="#" class="arrow__link">Learn more
+							<span class="arrow"></span>
+						</a>
 					</div>
-					<p class="grid-item__text">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming.</p>
-					<a href="#" class="arrow__link">Learn more
-						<span class="arrow"></span>
-					</a>
+					<div class="col">
+						<div class="grid-item__title">
+							<img src="/img/wallet.png" alt="wallet icon" class="grid-item__icon">
+							<h3>Money Saving</h3>
+						</div>
+						<p class="grid-item__text">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming.</p>
+						<a href="#" class="arrow__link">Learn more
+							<span class="arrow"></span>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+	<section class="works">
+		<div class="container">
+			<div class="row justify-content-end">
+				<div class="col-5">
+					<nav class="works__nav">
+						<ul class="works__nav-list">
+							<li class="works__nav-item">
+								<a href="#" class="works__nav-link active">all</a>
+							</li>
+							<li class="works__nav-item">
+								<a href="#" class="works__nav-link">abstract</a>
+							</li>
+							<li class="works__nav-item">
+								<a href="#" class="works__nav-link">weeding</a>
+							</li>
+							<li class="works__nav-item">
+								<a href="#" class="works__nav-link">product</a>
+							</li>
+							<li class="works__nav-item">
+								<a href="#" class="works__nav-link">landscape</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+		<div class="works__content">
+			<div class="container">
+				<div class="row">
+					<div class="section-title">
+						<h2>works</h2>
+					</div>	
+				</div>
+			</div>
+			<ul class="grid">
+				<li class="grid__item">
+					<a href="#" class="grid__link">
+						<img src="img/gal-img-4.jpg" alt="our works" class="grid__img">
+					</a>
+				</li>
+				<li class="grid__item">
+					<a href="#" class="grid__link">
+						<img src="img/gal-img-2.jpg" alt="our works" class="grid__img">
+					</a>
+				</li>
+				<li class="grid__item large">
+					<a href="#" class="grid__link">
+						<img src="img/gal-img-3.jpg" alt="our works" class="grid__img">
+					</a>
+				</li>
+			</ul>
+			<ul class="grid">
+				<li class="grid__item">
+					<a href="#" class="grid__link">
+						<img src="img/gal-img-1.jpg" alt="our works" class="grid__img">
+					</a>
+				</li>
 
-
-
+				<li class="grid__item large">
+					<a href="#" class="grid__link">
+						<img src="img/gal-img-5.jpg" alt="our works" class="grid__img">
+					</a>
+				</li>
+				<li class="grid__item">
+					<a href="#" class="grid__link">
+						<img src="img/gal-img-6.jpg" alt="our works" class="grid__img">
+					</a>
+				</li>
+			</ul>
+		</div>		
+	</section>
+	<section class="speech about">
+		<div class="container">			
+			<div class="speech__content">
+				<div class="row">			
+					<div class="col d-flex justify-content-end">	
+						<div class="section-title">
+							<h2>speech</h2>
+						</div>		
+					</div>			
+				</div>
+				<div class="row about__row justify-content-center">
+					<div class="col-5">
+						<img src="/img/man3.jpg" alt="about" class="speech__img">
+					</div>
+					<div class="col-5 d-flex  align-items-center speech__height">
+						<div class="about__text-content">
+							<span class="quotes">&quot;</span>
+							<p class="speech__text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+							<span class="speech__author">David Ramon</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	crossorigin="anonymous"></script>
