--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 				<a href="lesson_8_foliac/index.html" class="link">
 					<span>Foliac</span>
 				</a> -->
-<!-- 			</li> -->
-			<li class="item">
-				<a href="Lesson_9_ProductMan/index.html" class="link">
-					<span>ProductMan</span>
-				</a>
-			</li>
+				<!-- 			</li> -->
+				<li class="item">
+					<a href="Lesson_9_ProductMan/index.html" class="link">
+						<span>ProductMan</span>
+					</a>
+				</li>
 			<!-- <li class="item">
 				<a href="Lesson_css_grid/index.html" class="link">
 					<span>Lesson_css_grid</span>
@@ -68,17 +68,23 @@
 					<span>Nike dark</span>
 				</a>
 			</li>
-			<li class="item">
+			<!-- <li class="item">
 				<a href="Cahee/app/index.html" class="link">
 					<span>Cahee</span>
 				</a>
-			</li>
+			</li> -->
 
 			<li class="item">
 				<a href="Lesson_exam/app/index.html" class="link">
 					<span>Exam</span>
 				</a>
-			</li>						
+			</li>	
+
+			<li class="item">
+				<a href="Cahee2/app/index.html" class="link">
+					<span>Cahee</span>
+				</a>
+			</li>				
 		</ul>
 	</div>
 </body>
