--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			</li>	
 
 			<li class="item">
-				<a href="Cahee2/app/index.html" class="link">
+				<a href="Cahee_bs/app/index.html" class="link">
 					<span>Cahee</span>
 				</a>
 			</li>				
