--- a/index.html
+++ b/index.html
@@ -2,12 +2,52 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Menu</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="container">
-		<ul class="list">
+	<header class="header">
+		<div class="container">
+			<div class="row header__name">
+				<div class="col d-flex justify-content-center">
+					<a href="#"  class="header_link">
+					Юлия Ульянова | Beetroot Academy | +3&nbsp;8&nbsp;098&nbsp;889&nbsp;83&nbsp;30</a>
+				</div>
+			</div>
+
+			<div class="row d-flex justify-content-center">
+				<div class="col-7">
+					<nav class="navigation">
+						<span class="mobile-menu"></span>
+						<ul class="navigation__list">
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">1</a>
+							</li>
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">2</a>
+							</li>							
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">3</a>
+							</li>							
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">4</a>
+							</li>
+						</ul>
+					</nav>
+				</div>				
+			</div>
+
+		</div>
+	</header>
+
+	<div class="container section-links">
+
+		<div class="row">
+			<div class="col d-flex justify-content-center">
+				<ul class="list">
 			<!-- <li class="item">
 				<a href="lesson_2/index.html" class="link">
 					<span>lesson_2</span>
@@ -86,6 +126,63 @@
 				</a>
 			</li>				
 		</ul>
+
 	</div>
+</div>
+
+<div class="row">
+	<div class="col d-flex justify-content-center">
+		<ul class="list">
+			<li class="item">
+				<a href="Lesson_JS_1/app/index.html" class="link">
+					<span>Чёрный Властелин</span>
+				</a>
+			</li>
+			<li class="item">
+				<a href="Lesson_JS_2/app/index.html" class="link">
+					<span>простые числа</span>
+				</a>
+			</li>
+			<li class="item">
+				<a href="Lesson_JS_3/app/index.html" class="link">
+					<span>новый массив</span>
+				</a>
+			</li>		
+		</ul>
+
+	</div>
+</div>
+
+
+</div>
+
+<footer class="footer">
+	<div class="container">
+		<div class="row d-flex justify-content-center">
+			<div class="col social-icons-wrapper">
+				<div class="social-icon-box">
+					<a href="https://www.instagram.com/fedorova.yulia89/" target="_blank" rel="noopener noreferrer"><i class="icon-instagram"></i></a>
+				</div>
+				<div class="social-icon-box">
+					<a href="https://www.facebook.com/profile.php?id=100000574567129" target="_blank" rel="noopener noreferrer"><i class="icon-facebook"></i></a>
+				</div>			
+			</div>
+		</div>	
+
+		<div class="row">
+			<div class="col d-flex justify-content-center">
+				<span href="#"  class="copyright footer_author">Julia Ulyanova</span>
+			</div>
+		</div>
+	</div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+crossorigin="anonymous"></script>
+
 </body>
 </html>
