--- a/Lesson_18_bootstrap2/app/index.html
+++ b/Lesson_18_bootstrap2/app/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Bootstrap</title>
+	<title>Creato</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700,900" rel="stylesheet">
@@ -22,6 +22,7 @@
 				</div>	
 				<div class="col-7">
 					<nav class="navigation">
+						<span class="mobile-menu"></span>
 						<ul class="navigation__list">
 							<li class="navigation__item">
 								<a href="#" class="navigation__link">welcome</a>
@@ -49,7 +50,7 @@
 				<div class="col-5 ">
 					<div class="first-screen__image">
 						<a href="#" class="first-screen__image-link">
-							<img src="img/man1.jpg" alt="man">
+							<img class="photograf" src="img/man1.jpg" alt="man">
 							<i class="fas fa-play"></i>
 						</a>
 					</div>
@@ -94,10 +95,12 @@
 	<section class="services section__height d-flex align-items-center">
 		<div class="container">
 			<div class="services__content">
-				<div class="row justify-content-end">		
-					<div class="section-title">
-						<h2>services</h2>
-					</div>					
+				<div class="row">
+					<div class="col d-flex justify-content-end">	
+						<div class="section-title">
+							<h2>services</h2>
+						</div>			
+					</div>	
 				</div>
 				<div class="row">
 					<div class="col">
@@ -205,7 +208,7 @@
 			</ul>
 		</div>		
 	</section>
-	<section class="speech about">
+	<section class="speech">
 		<div class="container">			
 			<div class="speech__content">
 				<div class="row">			
@@ -221,8 +224,8 @@
 					</div>
 					<div class="col-5 d-flex  align-items-center speech__height">
 						<div class="about__text-content">
-							<span class="quotes">&quot;</span>
-							<p class="speech__text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+							<span class="quotes">&ldquo;</span>
+							<blockquote class="speech__text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent zzril delenit augue duis dolore te feugait nulla facilisi.</blockquote>
 							<span class="speech__author">David Ramon</span>
 						</div>
 					</div>
@@ -231,12 +234,82 @@
 		</div>
 	</section>
 
+	<section class="partners">
+		<div class="container">
+				<ul class="partners__list row">
+					<li class="partners__item col-2">
+						<a href="#" class="partners__link" target="_blank">
+							<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
+						</a>
+					</li>
+					<li class="partners__item col-2">
+						<a href="#" class="partners__link" target="_blank">
+							<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
+						</a>
+					</li>
+					<li class="partners__item col-2">
+						<a href="#" class="partners__link" target="_blank">
+							<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
+						</a>
+					</li>
+					<li class="partners__item col-2">
+						<a href="#" class="partners__link" target="_blank">
+							<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
+						</a>
+					</li>
+					<li class="partners__item col-2">
+						<a href="#" class="partners__link" target="_blank">
+							<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
+						</a>
+					</li>
+					<li class="partners__item col-2">
+						<a href="#" class="partners__link" target="_blank">
+							<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
+						</a>
+					</li>
+				</ul>
+			</div>
+	</section>
+
+
+<section class="contact">
+	<div class="container">
+		<div class="row">
+			<div class="col-5">
+				<ul class="contact__data">
+					<li class="contact__data-item">
+						<h6>email</h6>
+						<a href="mailto:username@mail.com">username@mail.com</a>
+					</li>
+					<li class="contact__data-item">
+						<h6>phone</h6>
+						<a href="tel:+0001112222">+000-111-2222</a>
+						<a href="tel:+0001122322">+000-111-2222</a>
+					</li>
+					<li class="contact__data-item">
+						<h6>Address</h6>
+						<address>27, Red view street,<br/>NY, USA</address>
+					</li>
+				</ul>
+			</div>
+			<div class="col-7">
+				<form action="" class="contact__form"></form>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 	crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	crossorigin="anonymous"></script>
+	<script src="/js/script.js"></script>
+
 
 <!--
 <i class="fab fa-facebook-f"></i>
