--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 						<span class="mobile-menu"></span>
 						<ul class="navigation__list">
 							<li class="navigation__item">
-								<a href="#" class="navigation__link">1</a>
+								<a href="#" class="navigation__link">
+								homework</a>
 							</li>
 							<li class="navigation__item">
 								<a href="#" class="navigation__link">2</a>
 							</li>							
 							<li class="navigation__item">
-								<a href="#" class="navigation__link">3</a>
+								<a href="#" class="navigation__link">JS</a>
 							</li>							
 							<li class="navigation__item">
 								<a href="#" class="navigation__link">4</a>
@@ -47,57 +48,17 @@
 
 		<div class="row">
 			<div class="col d-flex justify-content-center">
-				<ul class="list">
-			<!-- <li class="item">
-				<a href="lesson_2/index.html" class="link">
-					<span>lesson_2</span>
-				</a>
-			</li>
-			<li class="item">
-				<a href="lesson_5_Weather/index.html" class="link">
-					<span>Weather</span>
-				</a>
-			</li>
-			<li class="item">
-				<a href="lesson_6_Dinner/index.html" class="link">
-					<span>Dinner</span>
-				</a>
-			</li>
-			<li class="item">
-				<a href="lesson_7_search/index.html" class="link">
-					<span>Search</span>
-				</a>
-			</li>
-			<li class="item">
-				<a href="lesson_8_foliac/index.html" class="link">
-					<span>Foliac</span>
-				</a> -->
-				<!-- 			</li> -->
-				<li class="item">
-					<a href="Lesson_9_ProductMan/index.html" class="link">
-						<span>ProductMan</span>
-					</a>
-				</li>
+				<ul class="list">		
+					<li class="item">
+						<a href="Lesson_9_ProductMan/index.html" class="link">
+							<span>ProductMan</span>
+						</a>
+					</li>
 			<!-- <li class="item">
 				<a href="Lesson_css_grid/index.html" class="link">
 					<span>Lesson_css_grid</span>
 				</a>
-			</li>
-			<li class="item">
-				<a href="Lesson_cups/index.html" class="link">
-					<span>Cups</span>
-				</a>
-			</li>
-			<li class="item">
-				<a href="Lesson_image-grid/index.html" class="link">
-					<span>Image-grid</span>
-				</a>
-			</li>
-			<li class="item">
-				<a href="checkers/index.html" class="link">
-					<span>Checkers</span>
-				</a>
-			</li>
+			</li>		
 			<li class="item">
 				<a href="blog-grid/index.html" class="link">
 					<span>Blog-grid</span>
@@ -107,13 +68,7 @@
 				<a href="Lesson_nikedark/index.html" class="link">
 					<span>Nike dark</span>
 				</a>
-			</li>
-			<!-- <li class="item">
-				<a href="Cahee/app/index.html" class="link">
-					<span>Cahee</span>
-				</a>
-			</li> -->
-
+			</li>			
 			<li class="item">
 				<a href="Lesson_exam/app/index.html" class="link">
 					<span>Exam</span>
