--- a/Cahee_bs/src/index.html
+++ b/Cahee_bs/src/index.html
@@ -12,36 +12,42 @@
 <body>
 	<header class="main-header">
 		<div class="container">
-			<div class="row ">
-				<div class="col main-header__logo">
-					<a href="/">
-						<span>Cahee</span>
-					</a>
-				</div>
-				<div class="col main-header__menu justify-content-between align-items-center">
-					<ul class="main-header__list">
-						<li class="main-header__item">
-							<a href="/" class="main-header__link">HOME</a>
-						</li>
-						<li class="main-header__item">
-							<a href="#about" class="main-header__link">ABOUT</a>
-						</li>
-						<li class="main-header__item">
-							<a href="#services" class="main-header__link">SERVICES</a>
-						</li>
-						<li class="main-header__item">
-							<a href="#gallery" class="main-header__link">GALLERY</a>
-						</li>
-						<li class="main-header__item">
-							<a href="#blog" class="main-header__link">BLOG</a>
-						</li>
-						<li class="main-header__item">
-							<a href="#" class="main-header__link">CONTACT</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
+			<!-- <div class="row justify-content-between align-items-center" id="topline">
+				<div class="col-12"> -->
+					<nav class="navigation navbar navbar-expand-lg">
+						<div class="row  justify-content-between f100 align-items-center">
+							<div class="col-3 main-header__logo">
+								<a href="/">
+									<span>Cahee</span>
+								</a>
+							</div>
+							<div class="col-9 main-header__menu justify-content-between d-flex align-items-end flex-column">
+								<ul class="main-header__list">
+									<li class="main-header__item">
+										<a href="/" class="main-header__link">HOME</a>
+									</li>
+									<li class="main-header__item">
+										<a href="#about" class="main-header__link">ABOUT</a>
+									</li>
+									<li class="main-header__item">
+										<a href="#services" class="main-header__link">SERVICES</a>
+									</li>
+									<li class="main-header__item">
+										<a href="#gallery" class="main-header__link">GALLERY</a>
+									</li>
+									<li class="main-header__item">
+										<a href="#blog" class="main-header__link">BLOG</a>
+									</li>
+									<li class="main-header__item">
+										<a href="#" class="main-header__link">CONTACT</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</nav>
+				</div>				
+			<!-- </div>
+		</div> -->
 	</header>
 	<section class="section_1 main-screen">	
 		<div class="container main-screen__container">
@@ -88,7 +94,9 @@
 <section class="section_3" id="services">
 	<div class="container">
 		<div class="row our_services">
-			<div class="col our_services__links">  
+
+
+			<div class="col-xl-6 col-md-12 our_services__links">  
 				<ul class="our_services__list">
 					<li class="our_services__item">
 						<a href="#" class="our_services__link">Online Shopping</a>
@@ -105,9 +113,11 @@
 				</ul>
 			</div>
 
-			<div class="col our_services__title"> 
+			<div class="col-xl-6 col-md-12 our_services__title"> 
 				<h1>Our Services</h1>
 			</div>
+
+
 
 		</div>
 	</div>
