--- a/Lesson_18_bootstrap2/src/index.html
+++ b/Lesson_18_bootstrap2/src/index.html
@@ -12,60 +12,72 @@
 <body>
 	<section class="first-screen">
 		<div class="container first-screen__container">
-			<div class="row justify-content-between align-items-center">
-				<div class="col-1">
-					<div class="logo">
-						<a href="#" class="logo-link">
-							<img  class="logo__img" src="img/logo.png" alt="logo">
-						</a>
-					</div>
-				</div>	
-				<div class="col-7">
-					<nav class="navigation">
-						<span class="mobile-menu"></span>
-						<ul class="navigation__list">
-							<li class="navigation__item">
-								<a href="#" class="navigation__link">welcome</a>
-							</li>
-							<li class="navigation__item">
-								<a href="#" class="navigation__link">about</a>
-							</li>
-							<li class="navigation__item">
-								<a href="#" class="navigation__link">services</a>
-							</li>
-							<li class="navigation__item">
-								<a href="#" class="navigation__link">portfolio</a>
-							</li>
-							<li class="navigation__item">
-								<a href="#" class="navigation__link">testimonial</a>
-							</li>
-							<li class="navigation__item">
-								<a href="#" class="navigation__link">contact</a>
-							</li>
-						</ul>
+			<div class="row justify-content-between align-items-center" id="topline">
+				<div class="col-12">
+					<nav class="navigation navbar navbar-expand-lg">
+						<div class="row justify-content-between f100 align-items-center">
+							<div class="col-1">
+								<div class="navbar-brand logo">
+									<a id="test" href="#">
+										<img src="img/logo.png" alt="logo" class="logo__img">
+									</a>					
+								</div>
+							</div>
+							<div class="col-7 d-flex align-items-end flex-column">
+								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+									<span class="navbar-toggler-icon">
+										<i class="fas fa-bars"></i>
+										<i class="fas fa-times"></i>
+									</span>
+								</button>						
+								<div class="collapse navbar-collapse" id="navbarNav">
+									<ul class="navigation__list navbar-nav">
+										<li class="navigation__item nav-item active">
+											<a href="#" class="nav-item nav-link navigation__link">welcome <span class="sr-only">(current)</span></a>
+										</li>
+										<li class="navigation__item nav-item">
+											<a href="#" class="nav-link navigation__link">about</a>
+										</li>
+										<li class="navigation__item nav-item">
+											<a href="#" class="nav-link navigation__link">services</a>
+										</li>
+										<li class="navigation__item nav-item">
+											<a href="#" class="nav-link navigation__link">portfolio</a>
+										</li>
+										<li class="navigation__item nav-item">
+											<a href="#" class="nav-link navigation__link">testimonial</a>
+										</li>
+										<li class="navigation__item nav-item">
+											<a href="#" class="nav-link navigation__link">contact</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
 					</nav>
-				</div>							
+				</div>
 			</div>
-			<div class="row justify-content-between">
-				<div class="col-5 ">
+			<div class="row justify-content-between">				
+				<div class="col-5">					
 					<div class="first-screen__image">
-						<a href="#" class="first-screen__image-link">
-							<img class="photograf" src="img/man1.jpg" alt="man">
+						<a class="first-screen__image-link" href="#">
+							<img class="photograf" src="img/man1.jpg" alt="main img photograph">
 							<i class="fas fa-play"></i>
-						</a>
+						</a>						
 					</div>
 				</div>
-				<div class="col-6 ">
+				<div class="col-6">
 					<div class="first-screen__title">
-						<h1>Creativity <br>comes first</h1>
+						<h1>
+							Creativity<br>comes first
+						</h1>
 					</div>
-					<p class="first-screen__text"> Thinking about overseas adventure travel? Have you put any thought into the best places to go when it comes.</p>
-					<a href="#" class="arrow__link">Discover more<span class="arrow"></span>
-					</a>
+					<p class="first-screen__text">Thinking about overseas adventure travel? Have you put any thought into the best places to go when it comes.</p>
+					<a class="arrow__link" href="#">Discover more <span class="arrow"></span></a>
 				</div>
 			</div>
 		</div>
-	</section>	
+	</section>
 	<section class="about">
 		<div class="container">			
 			<div class="about__content">
@@ -233,74 +245,133 @@
 			</div>
 		</div>
 	</section>
-
 	<section class="partners">
 		<div class="container">
-				<ul class="partners__list row">
-					<li class="partners__item col-2">
-						<a href="#" class="partners__link" target="_blank">
-							<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
-						</a>
-					</li>
-					<li class="partners__item col-2">
-						<a href="#" class="partners__link" target="_blank">
-							<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
-						</a>
-					</li>
-					<li class="partners__item col-2">
-						<a href="#" class="partners__link" target="_blank">
-							<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
-						</a>
-					</li>
-					<li class="partners__item col-2">
-						<a href="#" class="partners__link" target="_blank">
-							<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
-						</a>
-					</li>
-					<li class="partners__item col-2">
-						<a href="#" class="partners__link" target="_blank">
-							<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
-						</a>
-					</li>
-					<li class="partners__item col-2">
-						<a href="#" class="partners__link" target="_blank">
-							<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
-						</a>
-					</li>
-				</ul>
-			</div>
+			<ul class="partners__list row">
+				<li class="partners__item col-2">
+					<a href="#" class="partners__link" target="_blank">
+						<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
+					</a>
+				</li>
+				<li class="partners__item col-2">
+					<a href="#" class="partners__link" target="_blank">
+						<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
+					</a>
+				</li>
+				<li class="partners__item col-2">
+					<a href="#" class="partners__link" target="_blank">
+						<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
+					</a>
+				</li>
+				<li class="partners__item col-2">
+					<a href="#" class="partners__link" target="_blank">
+						<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
+					</a>
+				</li>
+				<li class="partners__item col-2">
+					<a href="#" class="partners__link" target="_blank">
+						<img src="img/logo-hipster.png" alt="partner logo" class="partners__logo">
+					</a>
+				</li>
+				<li class="partners__item col-2">
+					<a href="#" class="partners__link" target="_blank">
+						<img src="img/logo-miller.png" alt="partner logo" class="partners__logo">
+					</a>
+				</li>
+			</ul>
+		</div>
 	</section>
-
-
-<section class="contact">
-	<div class="container">
-		<div class="row">
-			<div class="col-5">
-				<ul class="contact__data">
-					<li class="contact__data-item">
-						<h6>email</h6>
-						<a href="mailto:username@mail.com">username@mail.com</a>
-					</li>
-					<li class="contact__data-item">
-						<h6>phone</h6>
-						<a href="tel:+0001112222">+000-111-2222</a>
-						<a href="tel:+0001122322">+000-111-2222</a>
-					</li>
-					<li class="contact__data-item">
-						<h6>Address</h6>
-						<address>27, Red view street,<br/>NY, USA</address>
-					</li>
-				</ul>
-			</div>
-			<div class="col-7">
-				<form action="" class="contact__form"></form>
+	<section class="contact">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="bg">
+						<div class="row">
+							<div class="col-md-5 d-flex">
+								<ul class="contact__data contact__col">
+									<li class="contact__data-item">
+										<h6>email</h6>
+										<a href="mailto:username@mail.com">username@mail.com</a>
+									</li>
+									<li class="contact__data-item">
+										<h6>phone</h6>
+										<a href="tel:+0001112222">+000-111-2222</a>
+										<a href="tel:+0001122322">+000-111-2222</a>
+									</li>
+									<li class="contact__data-item">
+										<h6>Address</h6>
+										<address>27, Red view street,<br/>NY, USA</address>
+									</li>
+								</ul>
+							</div>
+							<div class="col-md-7 d-flex">
+								<form class="contact__form contact__col" id="contactForm">
+									<fieldset>
+										<legend class="contact__form-title">Get In Touch</legend>
+										<input type="text" name="username" placeholder="Name">
+										<input type="email" name="useremail" placeholder="Email">
+										<textarea name="usermessage" cols="30" rows="3" placeholder="Message"></textarea>
+										<button class="arrow__link" type="submit">Send Now<span class="arrow"></span></button>
+									</fieldset>
+								</form>								
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-</section>
-
-
-
+	</section>
+	<footer class="footer d-flex align-items-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-6 d-flex align-items-center">				
+					<a href="/" class="footer__logo">
+						<img src="img/footer_logo.png" alt="footer logo">
+					</a>	
+					<p class="footer__copyright">Copyright 2016, All Rights Reserved</p>			
+				</div>
+				<div class="col-6 d-flex align-items-center justify-content-end">
+					<ul class="footer__social">
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link">
+								<i class="fab fa-twitter"></i>
+							</a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link">
+								<i class="fab fa-behance"></i>
+							</a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link">
+								<i class="fab fa-flickr"></i>
+							</a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link">
+								<i class="fab fa-instagram"></i>
+							</a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link">
+								<i class="fab fa-dribbble"></i>
+							</a>
+						</li>
+						<li class="footer__social-item">
+							<a href="#" class="footer__social-link">
+								<i class="fab fa-pinterest"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	crossorigin="anonymous"></script>
@@ -308,6 +379,7 @@
 	crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="/js/script.js"></script>
 
 
