--- a/Lesson_JS_3/app/index.html
+++ b/Lesson_JS_3/app/index.html
@@ -4,11 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Объекты и массивы</title>
-	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<p>Напиши функцию map(fn, array), которая принимает на вход функцию и массив, и обрабатывает каждый элемент массива этой функцией, возвращая новый массив.</p>
-	<script src="/js/index.js"></script>
+	<script src="./js/index.js"></script>
 	
 </body>
 </html>
