--- a/exam2/src/index.html
+++ b/exam2/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<header class="header">
+<!-- 	<header class="header">
 		<nav class="nav-menu">
 			<div class="container">
 				<div class="row">
@@ -188,7 +188,7 @@
 						<img class="d-block w-100" src="img/woks-resent.jpg" alt="Third slide">
 					</div>
 					<div class="carousel-item carousel__content">
-						<img class="d-block w-100" src="img/wok11s-resent.jpg" alt="Fourth slide">
+						<img class="d-block w-100" src="img/woks-resent.jpg" alt="Fourth slide">
 					</div>
 				</div>
 				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -202,9 +202,9 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
-	<section class="team">
+<!-- 	<section class="team">
 		<div class="container ">
 			<div class="row">
 				<div class="col-12">
@@ -218,7 +218,7 @@
 			</div>
 
 			<div class="row team__slider">
-				<div class="col-4">
+				<div class="col-sm-12 col-md-6 col-lg-4 team__col">
 					<div class="team__slide">
 						<img class="team__photo" src="img/miguel-obrien.jpg" alt="photo">
 						<span class="team__name">Miguel Obrien</span>
@@ -239,7 +239,7 @@
 						</a>					
 					</div>
 				</div>
-				<div class="col-4">
+				<div class="col-sm-12 col-md-6 col-lg-4  team__col">
 					<div class="team__slide">
 						<img class="team__photo" src="img/jackie-carroll.jpg" alt="photo">
 						<span class="team__name">jackie carroll</span>
@@ -264,7 +264,7 @@
 					</div>
 				</div>
 
-				<div class="col-4">
+				<div class="col-sm-12 col-md-6 col-lg-4  team__col">
 					<div class="team__slide">
 						<img class="team__photo" src="img/ida-morrison.jpg" alt="photo">
 						<span class="team__name">ida morrison</span>
@@ -289,60 +289,102 @@
 					</div>
 				</div>
 
-				<div class="col-4 team__slide">
-					<img class="team__photo" src="img/ida-morrison.jpg" alt="photo">
-					<span class="team__name">Miguel Obrien</span>
-					<span class="team__position">CEO & Founder</span>
+				<div class="col-sm-12 col-md-6 col-lg-4  team__col">
+					<div class="team__slide">
+						<img class="team__photo" src="img/ida-morrison.jpg" alt="photo">
+						<span class="team__name">ida morrison</span>
+						<span class="team__position">designer</span>
+					</div>
 					<div class="team__contacts">
 						<a href="#" class="team__link">
+							<img src="img/behance.svg" alt="behance" class="team__social-links">
+						</a>
+						<a href="#" class="team__link">
 							<img src="img/linked-in.svg" alt="linked-in" class="team__social-links">
+						</a>
+						<a href="#" class="team__link">
+							<img src="img/google.svg" alt="google" class="team__social-links">
+						</a>
+						<a href="#" class="team__link">
+							<img src="img/facebook.svg" alt="facebook" class="team__social-links">
+						</a>
+						<a href="#" class="team__link">
+							<img src="img/twitter.svg" alt="twitter" class="team__social-links">
 						</a>					
 					</div>
 				</div>
-				<div class="col-4 team__slide">
-					<img class="team__photo" src="img/ida-morrison.jpg" alt="photo">
-					<span class="team__name">Miguel Obrien</span>
-					<span class="team__position">CEO & Founder</span>
+				<div class="col-sm-12 col-md-6 col-lg-4  team__col">
+					<div class="team__slide">
+						<img class="team__photo" src="img/ida-morrison.jpg" alt="photo">
+						<span class="team__name">ida morrison</span>
+						<span class="team__position">designer</span>
+					</div>
 					<div class="team__contacts">
 						<a href="#" class="team__link">
+							<img src="img/behance.svg" alt="behance" class="team__social-links">
+						</a>
+						<a href="#" class="team__link">
 							<img src="img/linked-in.svg" alt="linked-in" class="team__social-links">
+						</a>
+						<a href="#" class="team__link">
+							<img src="img/google.svg" alt="google" class="team__social-links">
+						</a>
+						<a href="#" class="team__link">
+							<img src="img/facebook.svg" alt="facebook" class="team__social-links">
+						</a>
+						<a href="#" class="team__link">
+							<img src="img/twitter.svg" alt="twitter" class="team__social-links">
 						</a>					
 					</div>
 				</div>
-			</div>	
+			</div>
+		</div>
+	</section> -->
 
+	<section class="contact a456" id="contact"> 
+		<div id="map"></div>			
+	</section>
 
+	<footer class="footer" id="footer"> 
+		<div class="container">
+			<div class="row">
+				
+				<div class="footer__contacts col-sm-12 col-md-6 col-lg-6 order-md-2">
+					<a href="#" class="footer__link">
+						<img src="img/behance.svg" alt="behance" class="footer__social-links">
+					</a>
+					<a href="#" class="footer__link">
+						<img src="img/linked-in.svg" alt="linked-in" class="footer__social-links">
+					</a>
+					<a href="#" class="footer__link">
+						<img src="img/google.svg" alt="google" class="footer__social-links">
+					</a>
+					<a href="#" class="footer__link">
+						<img src="img/facebook.svg" alt="facebook" class="footer__social-links">
+					</a>
+					<a href="#" class="footer__link">
+						<img src="img/twitter.svg" alt="twitter" class="footer__social-links">
+					</a>					
+				</div>
+
+				<div class="col-sm-12 col-md-6 col-lg-6 order-md-1">
+					<p class="footer__copyright">
+						©2014 <span>tulus</span>driyo. All Rights Reserved.
+					</p>
+				</div>
+
+			</div>
 		</div>
 
-
-	</section>
-
-
-
-	<section class="a456" id="contact"> 
-
-		<p class="first-screen__text">
-			Duis mollis, est non commodo luctus,<br>
-			nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-		</p>
-
-		<div id="map"></div>
-
-		<p class="first-screen__text">
-			Duis mollis, est non commodo luctus, YOUR API KEY
-			AIzaSyAMtmSd2JSrcJhscPe0JkKshTWIsQekDBk
-
-			AIzaSyAMtmSd2JSrcJhscPe0JkKshTWIsQekDBk<br>
-			nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-		</p>
-	</section>
+		
+	</footer>
 
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<script src="js/slick.min.js"></script>
-	
+
 	<script src="js/script.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMtmSd2JSrcJhscPe0JkKshTWIsQekDBk&callback=initMap"
 	async></script>
