exam2_first_correction

--- a/exam2/app/index.html
+++ b/exam2/app/index.html
@@ -343,7 +343,8 @@
 	</section>
 
 	<section class="contact" id="contact"> 
-		
+		<div class="bg">
+			</div>
 		<div id="map"></div>	
 		<div class="container">
 			<div class="row mb-5">
@@ -392,6 +393,7 @@
 
 			</div>
 		</div>
+
 	</section>
 
 	<footer class="footer" id="footer"> 
